bibtex files may not contain VIM fold-marks

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -352,13 +352,12 @@ Terahertz spectroscopy of ferroelectrics and related materials
 % ---- other ----/*{{{*/
 % /*}}}*/
 
-% == Patents ==
-@misc{wickersham1960artificial,/*{{{*/
+% == Patents ==/*{{{*/
+@misc{wickersham1960artificial,
   title={Artificial dielectric polarizer},
   author={Wickersham Jr Arthur F},
   url={http://www.google.com/patents/US2921312},
   year={1960},
-  month=jan # "~12",
   publisher={Google Patents},
   note={US Patent 2,921,312}
 }
@@ -367,7 +366,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   author={Hannan Peter W},
   url={http://www.google.com.py/patents/US3254345},
   year={1966},
-  month=may # "~31",
   publisher={Google Patents},
   note={US Patent 3,254,345}
 }
@@ -376,7 +374,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   author={Anderson, Donald L},
   url={http://google.ru/patents/US3329958},
   year={1967},
-  month=jul # "~4",
   publisher={Google Patents},
   note={US Patent 3,329,958}
 }
@@ -385,7 +382,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   author={Ho, K.M. and Chan, C.T. and Soukoulis, C.},
   url={https://www.google.com.ar/patents/US5335240},
   year={1994},
-  month=aug # "~2",
   publisher={Google Patents},
   note={US Patent 5,335,240}
 }
@@ -394,7 +390,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   author={Sweatt, W.C. and Christenson, T.R.},
   url={https://www.google.com.ar/patents/US6875544},
   year={2005},
-  month=apr # "~5",
   publisher={Google Patents},
   note={US Patent 6,875,544}
 }
@@ -2260,8 +2255,8 @@ lts.fzu.cz/pdf/d-js.pdf
   pages={51--62},
   year={1953},
   publisher={IET}
-  %http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
 }
+  %http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
 @article{rotman1962plasma,
   title={Plasma simulation by artificial dielectrics and parallel-plate media},
   author={Rotman, Walter},
